styles.css
@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');

* {
    margin: 0;
}
body {
    font-family: Roboto, Arial;
    background-color: rgb(40, 153, 223);
}
a:link, a:visited, a:hover, a:active {
    text-decoration: none;
    color: white;
    font-weight: bold;
}
.container {
    display: grid;
    grid-template-columns: .8fr 5fr;
    grid-template-rows: .8fr 5fr;
    grid-template-areas: "sidebar contentCont"
                        "sidebar contentCont";
    height: 100vh;
}

.sidebar {
    background-color: rgb(40, 153, 223);
    grid-area: sidebar;
    display: grid;
    grid-template-rows: .5fr 2fr 3fr;
    grid-template-areas: "logo "
                        "links"
                        "supportLinks";
    gap: 30px;
    color: white;
    height: 100%;
}
.logo {
    grid-template-columns: 1fr 1fr;
}
.links {
    grid-area: links;
}
.support_links {
    grid-area: supportLinks;
}
.logoCont {
    display: flex;
    align-items: center;
    padding: 10px 20px 0 10px;
    gap: 10px;
    font-size: 1.5rem;
}
.logoCont img {
    filter: invert(1);
}
#logo {
    width: 3rem;
}
.navigation {
    display: grid;
    grid-template-columns: auto 3fr;
    align-items: center;
    padding: 10px 30px;
}
.navigation>p{
    justify-self: flex-start;
    padding-left: 20px;
}
.navigation img {
    filter: invert(1);
    height: auto;
    width: 1.5rem;
}

.content_container {
    background-color: rgb(176, 176, 176);
    display: grid;
    grid-template-rows: 1fr 5fr;
    grid-template-areas: "header"
                        "main";
    height: 100vh;
}

.header {
    background-color: white;
    grid-area: header;
}

.headerTop {
    padding: 20px 60px;
    display: flex;
    justify-content: space-between;
}
.topLeft {
    display: flex;
    align-items: center;
}
.headerTop img, #icon {
    height: auto;
    width: 1.3rem;
}
#searchbar {
    margin-left: 20px;
    padding-left: 10px;
    border: none;
    background-color: rgb(225, 225, 234);
    border-radius: 15px;
    height: 20px;
    width: 40vw;
    max-width: 600px;
}
#searchbar:focus {
    outline: none;
}
.topRight {
    display: flex;
    gap: 20px;
    margin-left: 20px;
    align-items: center;
}
.propic {
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: rgb(156, 141, 253);
    border-radius: 50%;
    height: 40px;
    min-width: 40px;
}

.headerBottom {
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 0 50px 20px;
}
.bottomLeft {
    display: flex;
    align-items: center;
}
.largePropic {
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: rgb(156, 141, 253);
    border-radius: 50%;
    height: 65px;
    min-width: 65px;
}
.largePropic img {
    height: 60px;
}
.name-greeting {
    display: flex;
    flex-direction: column;
    font-weight: bold;
    gap: 5px;
    padding: 10px;
}
.greeting {
    font-size: .8rem;
}
.name {
    font-size: 1.2rem;
}

.actionButtons {
    display: flex;
    gap: 20px;
}
.inputBtn {
    width: 75px;
    height: 35px;
    border: none;
    border-radius: 20px;
    background-color: rgb(40, 153, 223);
    color: white;
    font-weight: bold;
}

.main_content {
    background-color: rgb(225, 225, 234);
    grid-area: main;
    display: grid;
    grid-template-columns: 3fr 1fr;
    grid-template-rows: 1fr 1fr;
    grid-auto-columns: auto;
    grid-auto-rows: auto;
    grid-template-areas: "yourProjects announcements"
                        "yourProjects trending";
    padding: 20px;
    gap: 20px;
    
}
.yourProjects {
    background-color: rgb(225, 225, 234);
    grid-area: yourProjects;
    
}

.main_content {
    background-color: rgb(225, 225, 234);
    grid-area: main;
    display: grid;
    grid-template-columns: 3fr 1fr;
    grid-template-rows: 1fr 1fr;
    grid-auto-columns: auto;
    grid-auto-rows: auto;
    grid-template-areas: "yourProjects announcements"
                        "yourProjects trending";
    padding: 20px;
    gap: 20px;
}
.yourProjects {
    background-color: rgb(225, 225, 234);
    grid-area: yourProjects;
    overflow: auto;
}
.cards {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
    grid-auto-rows: 250px;
    grid-auto-flow: row;
    max-height: 200px;
    gap: 2rem;
    padding-bottom: 2rem;
    padding-right: 10px; 
}

.card {
    display: flex;
    flex-direction: column;
    border-left: 10px solid orange;
    background-color: white;
    box-shadow: 2px 2px 2px rgb(176, 176, 176);
    color: rgb(81, 81, 81);
    border-radius: 10px;
    padding: 2rem;
    padding-right: 10px;
    padding-bottom: 10px;
    overflow: auto;
    justify-content: space-between;
}

.cardActions {
    display: flex;
    gap: 10px;
    padding-top: 5px;
    justify-content: end;
}
.project-heading {
   padding: 10px;
   font-size: 1rem;
   font-weight: 600;
   letter-spacing: 2px;
}
.announcements {
    background-color: rgb(225, 225, 234);
    grid-area: announcements;
}
.trending {
    background-color: rgb(225, 225, 234);
    grid-area: trending;
}
.cardBtn {
    height: 20px;
}

.cardAnnouncements, .trendingAccounts {
    background-color: white;
    padding: 15px;
    border-radius: 10px;
    box-shadow: 2px 2px 2px rgb(81, 81, 81);
}
.announcementBody {
    padding: 10px;
}
.announcementTitle {
    font-weight: bold;
    font-size: .9rem;
    padding-bottom: 4px;
}
.announcementDescription {
    font-size: .8rem;
    color: rgb(81, 81, 81);
}
.trendingAccounts {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    gap: 20px;
}
.trendingAccount {
    display: flex;
    align-items: center;
}
.trendingPropic {
    height: 50px;
    min-width: 50px;
    border-radius: 50%;
    padding-right: 10px;
}
.trendingUser {
    font-size: .8rem;
}
.trendingBio {
    font-size: .8rem;
    color: rgb(81, 81, 81);
}

